# 14.1

./: .gitignore  README.md  pyproject.toml
src/: category.py  product.py
tests/: conftest.py  test_category.py  test_product.py
