[tool.poetry]
name = "14-1"
version = "0.1.0"
description = ""
authors = ["Ira <market_don@mail.ru>"]
readme = "README.md"
packages = [{include = "14"}]

[tool.poetry.dependencies]
python = "^3.13"
mypy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 119